--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,7 @@
             Buscar
         </button>
     </div>
+    <!-- importando o módulo -->
+    <script type="module" src="app/app.js"></script>
 </body>
 </html>
